--- a/pages/learn.html
+++ b/pages/learn.html
@@ -128,16 +128,15 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/features3.jpg" data-slide-to="2" data-bs-slide-to="2">
+                        <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
-                          <br><strong>Unique Styles</strong></h5>
+                          <br><strong>Analisi</strong></h5>
 
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7"> <br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -168,7 +167,7 @@
           <div class="item features-image сol-12 col-md-6 col-lg-3">
               <div class="item-wrapper">
                   <div class="item-img">
-                      <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
+                      <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="1" data-bs-slide-to="1">
                   </div>
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7">
@@ -180,29 +179,42 @@
                           &gt;</a></div>
                 </div>
             </div>
-            
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="" data-slide-to="2" data-bs-slide-to="2">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Storia della Musica 1</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/features3.jpg" data-slide-to="3" data-bs-slide-to="3">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7">
+                          <br><strong>Storia della Musica 2</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                            &gt;</a></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 </div>
 </section>
 
-<div class="item features-image сol-12 col-md-6 col-lg-3">
-    <div class="item-wrapper">
-        <div class="item-img">
-            <img src="https://www.gabrielavelitch.com/assets/images/learn/stockhausen.png" data-slide-to="4" data-bs-slide-to="4">
-        </div>
-        <div class="item-content">
-            <h5 class="item-title mbr-fonts-style display-7">
-              <br><strong>Il Paradigma di Stockhausen</strong></h5>
-
-            <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
-        </div>
-        <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                &gt;</a></div>
-    </div>
-</div>
-</div>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
