--- a/pages/learn.html
+++ b/pages/learn.html
@@ -103,8 +103,6 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Storia della Musica Elettroacustica</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">dal 1948 alla Computer Music.</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
@@ -118,8 +116,6 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Laboratorio di Tecnologie Musicali</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
@@ -133,8 +129,6 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Analisi</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"> <br></p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
@@ -147,10 +141,8 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Analisi Composizioni Karlheinz Stockhausen</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                             &gt;</a></div>
                 </div>
             </div>
@@ -172,10 +164,8 @@
                   <div class="item-content">
                       <h5 class="item-title mbr-fonts-style display-7">
                         <br><strong>Il Paradigma di Stockhausen</strong></h5>
-
-                      <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
                   </div>
-                  <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                  <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                           &gt;</a></div>
                 </div>
             </div>
@@ -187,10 +177,8 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Storia della Musica 1</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                             &gt;</a></div>
                 </div>
             </div>
@@ -202,10 +190,8 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Storia della Musica 2</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">coming soon<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
                             &gt;</a></div>
                 </div>
             </div>
