--- a/pages/learn.html
+++ b/pages/learn.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
-                          <br><strong>Analisi</strong></h5>
+                          <br><strong>Metodi per l'Analisi</strong></h5>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
