--- a/pages/learn/analisi/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi/tecniche_di_analisi_applicate_al_video.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisia</h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Metodi per l'Analisi</h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Tecniche di Analisi Applicate al Video</strong></h4>
             </div>
         </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe src="https://drive.google.com/file/d/1JZNbUHQnfyzYGSX7NxETvZQWbvEDqKgo/preview" width="640" height="480" allow="autoplay"></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://drive.google.com/file/d/1JZNbUHQnfyzYGSX7NxETvZQWbvEDqKgo/preview" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
