--- a/pages/learn.html
+++ b/pages/learn.html
@@ -130,7 +130,7 @@
                         <h5 class="item-title mbr-fonts-style display-7">
                           <br><strong>Metodi per l'Analisi</strong></h5>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                             &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-3">
