--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -114,9 +114,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
-                <p class="mbr-text mbr-fonts-style display-7">
+                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                      <strong>PRIMA VISIONE</strong>
+                  </h5>
+                  <p class="mbr-text mbr-fonts-style display-7">
 
-                </p>
+                  </p>
               </div>
           </div>
       </div>
