--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -118,7 +118,9 @@
                       <strong>PRIMA VISIONE</strong>
                   </h5>
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    <ul>
+                      <li><strong>00'00" - 00'20" - Scena 1:</strong> bianco&nero, uova, linee rosse orizzontali.</li>
+                    </ul>
                   </p>
               </div>
           </div>
