--- a/pages/learn.html
+++ b/pages/learn.html
@@ -98,7 +98,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="https://www.gabrielavelitch.com/assets/img/site/spectrogram.png" data-slide-to="0" data-bs-slide-to="0">
+                        <img src="https://www.gabrielavelitch.com/assets/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
@@ -111,7 +111,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="https://www.gabrielavelitch.com/assets/img/site/graphscore.png" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="https://www.gabrielavelitch.com/assets/img/site/graphscore.webp" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
