--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -141,6 +141,14 @@
                       <li><strong>04'02" - 04'04" - Scena 09_01_01:</strong> farfalla definita</li>
                       <li><strong>04'04" - 04'09" - Scena 07_02_03:</strong> variazione</li>
                     </ul>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                    <strong>DOMANDE</strong>
+                    <ul>
+                      <li><strong>Quali sono le figure?</strong> </li>
+                      <li><strong>QuaNTE sono le figure?</strong> </li>
+                      <li><strong>Quanti colori sono presenti?</strong> </li>
+                      <li><strong>Come sono i collegamenti tra le scene?</strong> </li>
+                    </ul>
                   </p>
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>SECONDA VISIONE</strong>
@@ -151,6 +159,13 @@
       </div>
   </section>
 
+  Le figure variano? Quante volte?
+
+  Lo sfondo collabora con la figura?
+
+  È presente una narrazione?
+
+  La figura si evolve? Come:
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
