--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -145,7 +145,7 @@
                     <strong>DOMANDE</strong>
                     <ul>
                       <li><strong>Quali sono le figure?</strong> </li>
-                      <li><strong>QuaNTE sono le figure?</strong> </li>
+                      <li><strong>Quante sono le figure?</strong> </li>
                       <li><strong>Quanti colori sono presenti?</strong> </li>
                       <li><strong>Come sono i collegamenti tra le scene?</strong> </li>
                     </ul>
@@ -153,19 +153,42 @@
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>SECONDA VISIONE</strong>
                   </h5>
-
+                  <li><strong>00'00" - 00'20" - Scena 01_01_01:</strong> </li>
+                  <li><strong>00'20" - 00'21" - Scena 02_01_01:</strong> </li>
+                  <li><strong>00'21" - 00'32" - Scena 01_02_01:</strong> </li>
+                  <li><strong>00'32" - 00'36" - Scena 03_01_01:</strong> </li>
+                  <li><strong>00'36" - 00'40" - Scena 04_01_01:</strong> </li>
+                  <li><strong>00'40" - 01'13" - Scena 05_01_01:</strong> </li>
+                  <li><strong>01'13" - 01'15" - Scena 05_02_01:</strong> </li>
+                  <li><strong>01'15" - 01'23" - Scena 02_02_01:</strong> </li>
+                  <li><strong>01'23" - 01'24" - Scena 05_03_01:</strong> </li>
+                  <li><strong>01'24" - 01'42" - Scena 02_03_01:</strong> </li>
+                  <li><strong>01'42" - 01'43" - Scena 04_02_01:</strong> </li>
+                  <li><strong>01'43" - 01'44" - Scena 06_01_01:</strong> </li>
+                  <li><strong>01'44" - 02'04" - Scena 07_01_01:</strong> </li>
+                  <li><strong>02'04" - 02'14" - Scena 07_02_01:</strong> </li>
+                  <li><strong>02'14" - 02'32" - Scena 08_01_01:</strong> </li>
+                  <li><strong>02'32" - 02'34" - Scena 02_04_01:</strong> </li>
+                  <li><strong>02'34" - 03'52" - Scena 08_02_01:</strong> </li>
+                  <li><strong>03'52" - 03'54" - Scena 02_05_01:</strong> </li>
+                  <li><strong>03'54" - 04'02" - Scena 07_02_02:</strong> </li>
+                  <li><strong>04'02" - 04'04" - Scena 09_01_01:</strong> </li>
+                  <li><strong>04'04" - 04'09" - Scena 07_02_03:</strong> </li>
+                </ul>
+                <p class="mbr-text mbr-fonts-style display-7">
+                <strong>DOMANDE</strong>
+                <ul>
+                  <li><strong>Le figure variano? Quante volte?</strong> </li>
+                  <li><strong>Lo sfondo collabora con la figura?</strong> </li>
+                  <li><strong>È presente una narrazione?</strong> </li>
+                  <li><strong>La figura si evolve? Come:</strong> </li>
+                </ul>
+              </p>
               </div>
           </div>
       </div>
   </section>
 
-  Le figure variano? Quante volte?
-
-  Lo sfondo collabora con la figura?
-
-  È presente una narrazione?
-
-  La figura si evolve? Come:
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
