--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -144,6 +144,8 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                     <strong>DOMANDE</strong>
                     <ul>
+                      <li><strong>Quante scene totali ci sono?</strong> </li>
+                      <li><strong>Quante scene uniche ci sono?</strong> </li>
                       <li><strong>Quali sono le figure?</strong> </li>
                       <li><strong>Quante sono le figure?</strong> </li>
                       <li><strong>Quanti colori sono presenti?</strong> </li>
