--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -114,6 +114,18 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
+              <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>Prima visione:</strong>
+                  <ul>
+                    <li>annotazione temporale dei cambi scena</li>
+                    <li>identificazione di ciò che vedo (es. figure, colori, elementi costanti)</li>
+                  </ul>
+                  <strong>Seconda visione:</strong>
+                  <ul>
+                    <li>analisi dello sfondo</li>
+                    <li>descrizione dettagliata delle scene (posizione e movimento elementi, descrizione delle variazioni)</li>
+                  </ul>
+                </p>
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>PRIMA VISIONE</strong>
                   </h5>
