--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -120,6 +120,7 @@
                     <li>annotazione temporale dei cambi scena</li>
                     <li>identificazione di ciò che vedo (es. figure, colori, elementi costanti)</li>
                   </ul>
+                  <p class="mbr-text mbr-fonts-style display-7">
                   <strong>Seconda visione:</strong>
                   <ul>
                     <li>analisi dello sfondo</li>
