--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -167,6 +167,13 @@
                       <li><strong>Come sono i collegamenti tra le scene?</strong> </li>
                     </ul>
                   </p>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>GRAFIZZAZIONE</strong>
+                  <ul>
+                    <li>Tracciare la linea temporale su carta millimetrata</li>
+                    <li>Segnare inizio/fine scene sula linea temporale</li>
+                  </ul>
+                </p>
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
                       <strong>SECONDA VISIONE</strong>
                   </h5>
