--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -208,6 +208,13 @@
                   <li><strong>La figura si evolve? Come:</strong> </li>
                 </ul>
               </p>
+              <p class="mbr-text mbr-fonts-style display-7">
+              <strong>GRAFIZZAZIONE</strong>
+              <ul>
+                <li>Assegnare segno grafico alle figure nella legenda</li>
+                <li>Assegnare segno grafico ai movimenti</li>
+              </ul>
+            </p>
               </div>
           </div>
       </div>
