--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -168,7 +168,7 @@
                     </ul>
                   </p>
                   <p class="mbr-text mbr-fonts-style display-7">
-                  <strong>GRAFIZZAZIONE</strong>
+                  <strong>GRAFIZZAZIONE (Partitura)</strong>
                   <ul>
                     <li>Tracciare la linea temporale su carta millimetrata</li>
                     <li>Segnare inizio/fine scene sula linea temporale</li>
@@ -209,9 +209,9 @@
                 </ul>
               </p>
               <p class="mbr-text mbr-fonts-style display-7">
-              <strong>GRAFIZZAZIONE</strong>
+              <strong>GRAFIZZAZIONE (Legenda)</strong>
               <ul>
-                <li>Assegnare segno grafico alle figure nella legenda</li>
+                <li>Assegnare segno grafico alle figure con relative variazioni</li>
                 <li>Assegnare segno grafico ai movimenti</li>
               </ul>
             </p>
