--- a/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
+++ b/pages/learn/analisi_compositiva/tecniche_di_analisi_applicate_al_video.html
@@ -171,7 +171,7 @@
                   <strong>GRAFIZZAZIONE (Partitura)</strong>
                   <ul>
                     <li>Tracciare la linea temporale su carta millimetrata</li>
-                    <li>Segnare inizio/fine scene sula linea temporale</li>
+                    <li>Segnare inizio/fine scene sulla linea temporale</li>
                   </ul>
                 </p>
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
