--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="item features-image сol-12 col-md-6 col-lg-3 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="img/site/bertoncini-550x301.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
+                        <img src="img/site/dams.webp" data-slide-to="0" data-bs-slide-to="0" alt="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Università degli Studi Roma Tre</strong></h5>
